# discordbot-in-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/env/: env.hpp
src/: main.cpp
